--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@typescript-eslint/eslint-plugin": "^5.12.1",
     "@typescript-eslint/parser": "^5.12.1",
     "autoprefixer": "^10.4.2",
+    "commitizen": "^4.2.4",
     "concurrently": "^7.0.0",
     "cross-env": "^7.0.3",
     "eslint": "^8.10.0",
